# hotel_reservations

./: .gitignore  app.py  main.py  pyproject.toml  template.py
config/: data-ingestion.yaml  data-transformation.yaml  data-validation.yaml  model-evaluation.yaml  model-params.yaml  model-trainer.yaml
experiment/: trial_01_data_ingestion.py  trial_02_data_validation.py  trial_03_data_transformation.py  trial_04_model_trainer.py  trial_05_model_evaluation.py
src/hotel_reservations/: exception.py  logger.py
src/hotel_reservations/components/: c_01_data_ingestion.py  c_02_data_validation.py  c_03_data_transformation.py  c_04_model_trainer.py  c_05_model_evaluation.py
src/hotel_reservations/config_entity/: config_params.py
src/hotel_reservations/config_manager/: config_settings.py
src/hotel_reservations/pipelines/: pip_01_data_ingestion.py  pip_02_data_validation.py  pip_03_data_transformation.py  pip_04_model_trainer.py  pip_05_model_evaluation.py  pip_07_prediction_pipeline.py
src/hotel_reservations/utils/: commons.py
static/: styles.css
templates/: home.html
